--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             </div>
         </div>
     </div>
+
     <!-- Main Code-->
+
     <div class="blank"></div>
 
     <div  class="wrap_1">
@@ -78,6 +80,153 @@
         </div>
         <div class="wrap_2_blank2"></div>
     </div>
+
+    <div class="wrap_3">
+        <div class="wrap_3_main">
+            <div class="wrap_3_left"></div>
+            <div class="wrap_3_center">
+                <p>아워 에일 출시 기념 이벤트</p>
+            </div>
+            <div class="wrap_3_right"></div>
+        </div>
+    </div>
     
+    <div class="wrap_4">
+        <div class="wrap_4_main">
+            <div class="wrap_4_left"></div>
+            <div class="wrap_4_center">
+                <p>OUR ALE 아워 에일</p>
+            </div>
+            <div class="wrap_4_right"></div>
+        </div>
+    </div>
+
+    <div class="wrap_5">
+        <div class="wrap_5_blank1">
+            <img src="img/184e199fad16a.png">
+        </div>
+        <div class="wrap_5_text">
+            <p>아워 에일(OUR ALE)은 우리(OUR)의 순간(HOUR)을 새롭게 만들어주는 맥주입니다.<br>제주를 만든 설문대 할망신의 설화에 영감을 받아, 새로운 시선으로 맥주와 디자인을 만들었습니다.</p>
+        </div>
+        <div class="wrap_5_blank2"></div>
+    </div>
+
+    <div class="wrap_6">
+        <div class="wrap_6_main">
+            <div class="wrap_6_left"></div>
+            <div class="wrap_6_right">
+                <div class="wrap_6_border">
+                    <div class="wrap_6_text1">
+                        <p class="subtitle1 subtitle_font">- 세상 힙한 만남 -</p>
+                        <p class="contents1 contents_font">새로운 문화를 선도하는 금융계 힙스터 현대카드와<br>새로운 맥주 문화를 만들어가는 맥주계 힙스터 제주맥주가 만나,<br>1년 반이라는 시간 동안 두 브랜드의 아이덴티티와 철학을 녹여<br>완전히 새로운 브랜드를 탄생시켰습니다.
+                        </p>
+                        <p class="images1"><img src="img/293e02d91ddc8.png"></p>
+                    </div>
+                    <div class="wrap_6_text2">
+                        <p class="subtitle2 subtitle_font">- 세상 힙한 맛 -</p>
+                        <p class="contents2 contents_font">맥주는 새 땅이 태어나는 생동감을 제주 영귤꽃의 화사함과<br>제주 보리의 달큰함으로 구현하였으며,<br>깔끔한 시트러스향이 감도는 마시기 편한 세션 에일을 만들었습니다.</p>
+                    </div>
+                    <div class="wrap_6_text3">
+                        <p class="subtitle3 subtitle_font">- 세상 힙한 디자인 -</p>
+                        <p class="contents3 contents_font">디자인은 설화 속 할망 신이 치마폭에 흙과 바위를 퍼 나르는 모습 대신<br>맥주의 대표 원료인 보리와 홉을 넣어<br>맥주를 빚는 모습으로 위트 있게 표현했습니다.<br>할망 신과 함께 표현된 진한 선은 설화 속 문양과 벽화를 모티프로,<br>블루, 그린, 레드의 색상은 제주의 자연 요소인 바다, 오름 그리고 해를 상징합니다.</p>
+                        <p class="images2"><img src="img/1a16872d629a5.png" alt=""></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="wrap_7">
+        <div class="wrap_7_blank1"></div>
+        <div class="wrap_7_title">
+            <strong>지금 바로 전국 CU 편의점에서 만나보세요!</strong>
+        </div>
+        <div class="wrap_7_blank2"></div>
+        <div class="wrap_7_search">
+            <img src="img/49b97c8aa4518.png">
+        </div>
+        <div class="wrap_7_blank3"></div>
+        <div class="wrap_7_images">
+            <div class="container">
+                <img src="img/0f1fedb7101c3.jpg">
+                <img src="img/93b9aece1a7c4.jpg">
+                <img src="img/e9bb800002247.jpg">
+            </div>
+            <div class="owldots"></div>
+        </div>
+        <div class="wrap_7_blank4"></div>
+    </div>
+
+    <div class="wrap_8">
+        <div class="wrap_8_top"></div>
+        <div class="wrap_8_bottom"></div>
+    </div>
+
+    <div class="wrap_9"></div>
+    <div class="wrap_10"></div>
+
+    <div class="wrap_11">
+        <div class="wrap_11_top">
+            <div class="wrap_11_text1">
+                <p>이벤트 응모자 중 추첨을 통해</p>
+            </div>
+            <div class="wrap_11_text2">
+                <p>총 100명에게 10만원</p>
+                <p>기프트 카드를 선물해 드립니다.</p>
+            </div>
+        </div>
+        <div class="wrap_11_blank1"></div>
+        <div class="wrap_11_bottom">
+            <p><span>응모기간</span><span>&nbsp;&nbsp; 11/5 ~ 11/19 (2주간)</span></p>
+            <p><span>당첨자 발표</span><span>11/24 (화) 오후 2시 (당첨자 개별 연락)</span></p>
+        </div>
+        <div class="wrap_11_blank2"></div>
+    </div>
+
+    <div class="wrap_12">
+        <div class="wrap_12_top">
+            <img src="img/eventend_guide.png">
+        </div>
+        <div class="wrap_12_bottom"></div>
+    </div>
+
+    <div class="wrap_13">
+        <div class="wrap_13_left"></div>
+        <div class="wrap_13_center">
+            <p class="wrap_13_text">유의사항</p>
+        </div>
+        <div class="wrap_13_right"></div>
+    </div>
+
+    <div class="wrap_14">
+        <div class="wrap_14_blank1"></div>
+        <div class="wrap_14_text1">
+            <div class="wrap_14_title"><p>이벤트 관련 유의사항</p></div>
+            <ul>
+                <li class="wrap_14_textr">만 19세 이상 성인부터 이벤트 응모 가능합니다. (미성년자 자동 응모 취소)</li>
+                <li>당첨자 발표는 개별 연락드리며, 따로 공지가 되지 않는 점 양해부탁드립니다. (당첨자 발표 11/24 화요일 오후 2시)</li>
+                <li>‘개인정보 수집 및 이용’ 동의 후에 이벤트 응모가 가능합니다.</li>
+                <li>질문에 관계없이 1회만 응모되며, 질문은 랜덤으로 제공됩니다. </li>
+                <li>중복 지원은 응모에서 제외됩니다. (동일한 연락처로 응모 할 경우 중복 응모로  간주됩니다.)</li>
+                <li>당첨자 발표 후 기프트 카드는 제세공과금 납부 관련 정보 수신 후 순차적으로 배송 되며, 배송 기간은 그로부터 3-5일이 소요될 수 있습니다.</li>
+                <li>제세공과금 22% 는 제주맥주가 부담합니다.<br>이에 따라, 당첨자에게는 “신분증 사본 (주민등록증, 운전면허증, 여권 등)”을 입력하신 연락처와 메일로 요청드릴 예정으로 요청 후<br>3일 이내 신분증 사본을 미제출 하실 경우 당첨에서 제외됩니다.</li>
+                <li>기타 문의사항이 있으시면, jejubeer@jejubeer.co.kr 로 문의 바랍니다.</li>
+            </ul>
+        </div>
+        <div class="wrap_14_blank2"></div>
+        <div class="wrap_14_text2">
+            <div class="wrap_14_title">
+                <div><p>기프트 카드 관련 유의사항</p></div>
+            </div>
+            <ul>
+                <li>현대카드 온·오프라인 가맹점에서 신용카드와 동일하게 잔액한도 내에서 사용 가능한 무기명 선불카드입니다.</li>
+                <li>온라인 사용은 현대카드 홈페이지에서 인터넷 사용등록 후 가능합니다.</li>
+                <li>일부 가맹점에서 사용이 제한될 수 있으며, 자세한 내용은 현대카드 홈페이지에서 “Gift 카드 사용 불가 가맹점” 확인<br>또는 현대카드 고객센터로 문의하시기 바랍니다.</li>
+                <li>현대카드 홈페이지 : www.hyundaicard.com</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="wrap_15"></div>
 </body>
 </html>
